zmq based search server.

--- a/etc/reader.conf
+++ b/etc/reader.conf
@@ -1,4 +1,5 @@
 [reader]
 worker_url = ipc://var/ipc/readers.ipc
 log_file = var/log/%s.log
-db_path = /idealist/var/index
+db_path = /trapit/zapp/current/index
+
