--- a/etc/writer.conf
+++ b/etc/writer.conf
@@ -1,4 +1,4 @@
 [writer]
 worker_url = ipc://var/ipc/writers.ipc
 log_file = var/log/%s.log
-db_path = /idealist/var/index
+db_path = /trapit/zapp/current/index
